# MasterThesis

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  CLEANUP_GUIDE.md  DEMO_SCRIPT.md  Edge-To-Cloud_WASM.md  NETWORKING_EDGE_TO_CLOUD.md  README.md  WASM_SANDBOX_GUIDE.md  ZEPHYR_OCRE_GUIDE.md  prepare_for_ocre.sh
.devcontainer/: devcontainer.json
hello-wasm/: Cargo.toml  hello_wasm_payload.h  spin.toml
hello-wasm/src/: lib.rs  main.rs
k8s/: spinapp.yaml
workspace/app/: CMakeLists.txt  prj.conf
workspace/app/src/: main.c
